<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/def" />

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/number"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:gravity="center_vertical"
                android:hint="@string/gender"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/editGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="100dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/female" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:gravity="center_vertical"
                android:hint="@string/language"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/editLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="100dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/hindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi" />

                <CheckBox
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/english" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter Name"
                android:background="@drawable/custom_edit_text"
                android:gravity="top"
                android:hint="@string/address"
                android:inputType="textMultiLine|textCapWords"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:scrollbars="vertical" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/back_to_login" />
    </LinearLayout>
</ScrollView>
