<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:background="@drawable/custom_edit_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/def" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="Enter Name"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/userMobile"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="Enter Name"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/userGender"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="Enter Name"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/userLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="Enter Name"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="Enter Name"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/userAddress"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:autofillHints="Enter Name"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/call"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/logout"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>